# unix_cred

./: .cirrus.yml  .coveragerc  .gitignore  .isort.cfg  Pipfile  README.md  codecov.yml  pylintrc  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
docs/: conf.py  index.rst
scripts/: check.sh  format.sh
tests/: test_ffi.py  test_main.py  test_peerucred.py  test_ucred.py  test_util.py  test_xucred.py  util.py
unix_cred/: __init__.py  constants.py  ffi.py  peerucred.py  ucred.py  util.py  xucred.py
