[metadata]
name = unix_cred
version = attr: unix_cred.__version__
url = https://github.com/cptpcrd/unix_cred
description = A library that simplifies reading peer credentials from Unix domain sockets
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Topic :: System :: Networking
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: BSD :: OpenBSD
    Operating System :: POSIX :: BSD :: NetBSD
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: MacOS :: MacOS X

[options]
packages = find:
python_requires = >=3.6
install_requires =
    dataclasses; python_version < "3.7"

# vim: ts=4 expandtab
